feature reasoning first pass

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -1786,6 +1786,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Feature reasoning first pass\n",
+    "\n",
+    "**MFCCs (Mel-Frequency Cepstral Coefficients)**\n",
+    "-\tWhat It Does: Encodes the spectral envelope of a sound, capturing timbral texture. MFCCs are derived from the Mel scale, which approximates human auditory perception.\n",
+    "- \tWhy Useful: Timbral characteristics are strong indicators of genre. For example, classical music may exhibit smoother MFCC patterns than hip-hop, which often has sharp MFCC variations.\n",
+    "\n",
+    "**Feature Trajectories (MFCC Delta)**\n",
+    "-\tWhat It Does: Measures the temporal variation (change over time) of MFCCs.\n",
+    "- \tWhy Useful: Captures dynamic changes in timbre, which can indicate rhythmic complexity or evolving soundscapes, relevant for genres with changing instrumentation or energy. (*We suspect that this will not be useful since the clips are only 30 seconds*)\n",
+    "\n",
+    "**Spectral Centroid**\n",
+    "-\tWhat It Does: Represents the \"center of mass\" of the spectrum, indicating the brightness of a sound.\n",
+    "-\tWhy Useful: Brighter sounds (e.g., electric guitars in rock) typically have a higher spectral centroid, while darker sounds (e.g., bass in jazz) have a lower centroid.\n",
+    "\n",
+    "**Spectral Roll-Off**\n",
+    "-\tWhat It Does: The frequency below which a certain percentage (e.g., 85%) of the total spectral energy is concentrated.\n",
+    "-\tWhy Useful: Differentiates between high-energy genres like electronic or pop and low-energy ones like ambient or classical.\n",
+    "\n",
+    "**Spectral Flux**\n",
+    "-\tWhat It Does: Measures the rate of change in the power spectrum, indicating how quickly the sound changes.\n",
+    "- \tWhy Useful: Genres with rapid changes (e.g., beatswitches in hiphop) will have higher spectral flux compared to more stable genres (e.g., classical).\n",
+    "\n",
+    "**Spectral Contrast**\n",
+    "-\tWhat It Does: Measures the difference in energy between spectral peaks and valleys.\n",
+    "-\tWhy Useful: Captures texture and complexity, distinguishing between genres like jazz (more contrast) and minimalistic genres (less contrast).\n",
+    "\n",
+    "**Envelope Features**\n",
+    "- \tWhat It Does: Describes the amplitude contour of the signal.\n",
+    "- \tWhy Useful: Differentiates between sustained notes (e.g., classical strings) and short, sharp transients (e.g., percussive sounds in hiphop).\n",
+    "\n",
+    "**Spectral Bandwidth**\n",
+    "-\tWhat It Does: Indicates the range of frequencies present in the signal.\n",
+    "-\tWhy Useful: Wider bandwidth is often found in energetic genres like metal or electronic music, while narrower bandwidth is typical in genres like classical or ambient.\n",
+    "\n",
+    "**Time-Domain Features**\n",
+    "-\tRMS Energy: Measures the average power of the signal, representing overall loudness.\n",
+    "-\tAmplitude Mean and Variance: Describes the signal's average strength and variability.\n",
+    "-\tWhy Useful: High-energy genres (e.g., Rock) typically exhibit higher energy values compared to softer genres (e.g., acoustic).'\n",
+    "\n",
+    "**Dynamic Range**\n",
+    "-\tWhat It Does: Measures the difference between the loudest and softest parts of the signal.\n",
+    "- \tWhy Useful: Helps distinguish genres with a wide range (e.g., classical symphonies) from those with compressed dynamics (e.g., electronic dance music).\n",
+    "\n",
+    "**Rhythm Features**\n",
+    "-\tTempo: Indicates the pace of the music (beats per minute).\n",
+    "-\tBeat Strength: Measures the prominence of beats in the music.\n",
+    "-\tWhy Useful: Rhythmic features are key to identifying genres like salsa (characterized by strong rhythms) or ambient (minimal rhythmic activity).\n",
+    "\n",
+    "**Rhythmic Regularity**\n",
+    "-\tWhat It Does: Variability in inter-beat intervals (IBI), indicating rhythmic consistency.\n",
+    "-\tWhy Useful: Regular rhythms are typical in dance music, while irregular rhythms appear in experimental genres.\n",
+    "\n",
+    "**Harmonic Features**\n",
+    "-\tKey and Scale Estimation (Chroma): Captures harmonic content by representing the energy distribution across pitches.\n",
+    "-\tWhy Useful: Harmonic structures can help distinguish classical music (well-defined key signatures) from atonal genres (e.g., some experimental electronic).\n",
+    "\n",
+    "**Tonnetz Features**\n",
+    "-\tWhat It Does: Captures tonal relations like harmonic complexity or consonance/dissonance.\n",
+    "-\tWhy Useful: Helps differentiate harmonically rich genres like jazz from simpler genres like punk rock.\n",
+    "\n",
+    "**Harmonic-to-Percussive Ratio (HPR)**\n",
+    "-\tWhat It Does: Measures the balance between harmonic and percussive content.\n",
+    "-\tWhy Useful: Percussion-heavy genres like hip-hop have a lower HPR compared to harmonic genres like classical.\n",
+    "\n",
+    "**Genre-Specific Features**\n",
+    "-\tHarmonic Energy: Indicates the presence of harmonic components.\n",
+    "-\tPercussive Energy: Highlights rhythmic elements.\n",
+    "-\tWhy Useful: Helps isolate characteristics of percussion-heavy or harmony-rich genres.\n",
+    "\n",
+    "**Zero-Crossing Rate (ZCR)**\n",
+    "-\tWhat It Does: Counts how often the signal crosses zero amplitude.\n",
+    "-\tWhy Useful: Indicates the noisiness of a signal, with higher ZCR in percussive genres (e.g., techno) and lower ZCR in smooth genres (e.g., orchestral).\n",
+    "\n",
+    "**Onset Autocorrelation**\n",
+    "-\tWhat It Does: Measures periodicity in onsets, reflecting rhythmic patterns.\n",
+    "-\tWhy Useful: Helps identify repetitive rhythms typical in dance music versus free-form genres.\n",
+    "\n",
+    "**Skewness and Kurtosis**\n",
+    "-\tWhat They Do: Statistical measures of the amplitude distribution's shape.\n",
+    "-\tWhy Useful: Help capture the signal's symmetry and peakedness, differentiating genres based on amplitude dynamics.\n",
+    "\n",
+    "By combining these features, we try to create a comprehensive representation of the music files, which is crucial for capturing the nuances of different genres in unsupervised clustering.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Unsupervised Learning"
    ]
   },
