--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -13872,7 +13872,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## nog toevoegen"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -13886,7 +13888,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## nog toevoegen"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -13900,7 +13904,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## nog toevoegen"
+   ]
   }
  ],
  "metadata": {
