--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -8676,6 +8676,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Difference between NMF and PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One key difference between PCA and NMF is that NMF gives you \"metafeatures\" (or \"metagenes\") that are representative of the whole data's main characteristics while PCA gives you progressive approximations of the data.\n",
+    "\n",
+    "Source: What is The Main Difference between PCA and NMF and why to choose one rather than the other? (n.d.). Cross Validated. https://stats.stackexchange.com/questions/502072/what-is-the-main-difference-between-pca-and-nmf-and-why-to-choose-one-rather-tha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reapplying clustering method new dataset"
    ]
   },
