--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -4,21 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do:\n",
-    "\n",
-    "1. Uitleg features (Jassar)\n",
-    "2. 3 clustering modellen kiezen uitleggen, voor- nadelen (Jordan, Casper, Jassar Ieder neemt 1 model en legt deze uit)\n",
-    "3. Cluster model kiezen en toepassen (Met zn allen als 2 klaar is)\n",
-    "4. Vergelijken labeled en niet labeled \n",
-    "5. “Dimensionality reduction\" toepassen en uitleggen\n",
-    "6. hermodelleren\n",
-    "7. Suggestie appje maken (random liedje uit zelfde cluster)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Kaggle team name: ¿!_xX5Vijf5Xx_!?😎💅🕺🫃\n",
     "\n",
     "# Members:\n",
@@ -3445,7 +3430,9 @@
     "\n",
     "Feature extraction — librosa 0.10.2.post1 documentation. (z.d.). https://librosa.org/doc/main/feature.html#spectral-features\n",
     "\n",
-    "https://chatgpt.com/c/678534d2-8c30-8010-bce7-10c24097af80\n"
+    "ChatGPT - Feature Importance for Genre Clustering. (z.d.). ChatGPT. https://chatgpt.com/share/67853523-2ad4-8010-a883-1b2ae95e9a7a\n",
+    "ChatGPT - Unsupervised Music Genre features. (n.d.). ChatGPT. https://chatgpt.com/share/6794ebdd-8cfc-8002-8852-12249e5839e9\n",
+    "\n"
    ]
   },
   {
@@ -6815,7 +6802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "his plot demonstrates that the inertia decreases sharply between 1 and 3 clusters, indicating a significant improvement in clustering quality as the number of clusters increases. However, after 3 clusters, the rate of decrease in inertia slows down considerably, suggesting diminishing returns in adding more clusters. This change in slope, often referred to as the \"elbow\" point, is where adding additional clusters no longer results in a substantial reduction in inertia. Based on this observation, we have determined that the optimal number of clusters for the unlabeled dataset is 3, as it balances simplicity and clustering effectiveness."
+    "This plot demonstrates that the inertia decreases sharply between 1 and 3 clusters, indicating a significant improvement in clustering quality as the number of clusters increases. However, after 3 clusters, the rate of decrease in inertia slows down considerably, suggesting diminishing returns in adding more clusters. This change in slope, often referred to as the \"elbow\" point, is where adding additional clusters no longer results in a substantial reduction in inertia. Based on this observation, we have determined that the optimal number of clusters for the unlabeled dataset is 3, as it balances simplicity and clustering effectiveness."
    ]
   },
   {
@@ -7123,9 +7110,7 @@
     "- Euclidean distance in very high-dimensional spaces may become less meaningful.\n",
     "\n",
     "\n",
-    "This explanation was made with ChatGPT\n",
-    "\n",
-    "https://chatgpt.com/share/6790cd05-83d0-800b-a2db-457eb142a42a\n"
+    "ChatGPT - New chat. (z.d.). ChatGPT. https://chatgpt.com/share/6790cd05-83d0-800b-a2db-457eb142a42a\n"
    ]
   },
   {
@@ -10998,12 +10983,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 143,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## nog toevoegen"
+    "\n",
+    "The determination of key components in PCA and NMF is based on the analysis of elbow plots, which are used to decide how many components or features to include."
    ]
   },
   {
