app and requirements to main

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -10965,7 +10965,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Zelf een app coderen om suggesties te maken**"
+    "De recommendation app staat in de recommendation_app.py file, hier worden de datasets geladen en een webinterface gemaakt met streamlit, jammer genoeg werkt het niet perfect.\n",
+    "\n",
+    "Het werkt door het bestand te runnen met streamlit in cmd"
    ]
   },
   {
