changed mfcc explation, still needs a source

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2502,23 +2502,23 @@
     "### Feature reasoning first pass\n",
     "\n",
     "#### **MFCCs (Mel-Frequency Cepstral Coefficients)**\n",
-    "-   **TLDR**: MFCCs transform raw audio into a compact representation aligned with human perception. By summarizing frequency content with a perceptual emphasis, they excel at distinguishing timbral differences—an essential characteristic for clustering and classifying music genres.\n",
+    "-   **TLDR**: MFCCs turn raw audio into a simpler, more human-like representation of sound. They focus on capturing the tone and texture of music, making them great for grouping and identifying different genres.\n",
     "\n",
     "**What It Does:**\n",
-    "- MFCCs encode the spectral envelope of a sound, summarizing the timbral texture and frequency content in a compact form. \n",
-    "- These coefficients are derived from the Mel scale, which is a perceptual scale of pitches designed to approximate how the human ear interprets frequencies.\n",
+    "- MFCCs describe the overall shape of a sound’s frequency content, focusing on its tone and texture.\n",
+    "- They are based on the Mel scale, which mimics how our ears naturally hear different pitches.\n",
     "\n",
     "**Why Useful:**\n",
     "- **Timbral characteristics** are key indicators of musical genre. For instance:\n",
-    "    - Classical music tends to have smooth, consistent MFCC patterns due to its harmonic richness and lack of sharp transients.\n",
-    "    - Hip-hop often exhibits sharp MFCC variations, reflecting its percussive beats and dynamic changes.\n",
-    "    - MFCCs reduce the high-dimensional frequency information of audio into a smaller, meaningful representation that aligns well with human auditory perception, making them especially valuable for clustering and genre classification tasks.\n",
+    "    - Classical music usually has smooth, steady MFCC patterns because of its rich harmonies and gentle flow.\n",
+    "    - Hip-hop shows more sudden changes in MFCCs, reflecting its strong beats and quick shifts.\n",
+    "    - MFCCs simplify complex audio data into a smaller, more meaningful form that matches how we hear sounds. This makes them helpful for tasks like grouping similar music or identifying genres.\n",
     "\n",
     "**How MFCCs Are Constructed:**\n",
     "\n",
     "1. **Frame the Signal:**\n",
-    "    - Audio signals are processed in small, overlapping frames (e.g., 25ms long) because sound properties change over time. \n",
-    "    - A Hamming window is often applied to each frame to reduce edge artifacts.\n",
+    "    - Sound changes over time, so we split it into small overlapping chunks. \n",
+    "    - A smoothing function (Hamming window) is applied to each chunk to avoid sharp edges.\n",
     "     $$\n",
     "     w(n) = 0.54 - 0.46 \\cdot \\cos\\left(\\frac{2\\pi n}{N-1}\\right)\n",
     "     $$\n",
@@ -2531,11 +2531,11 @@
     "    - This gives the magnitude spectrum, showing how much energy exists at each frequency.\n",
     "\n",
     "3. **Apply the Mel Scale:**\n",
-    "    - The human ear is more sensitive to changes in low frequencies than high frequencies. The Mel scale models this perception by warping the frequency axis:\n",
+    "    - The human ear is more sensitive to changes in low frequencies than high frequencies. The Mel Scale warps the frequency axix to model the perception: \n",
     "     $$\n",
     "     m(f) = 2595 \\cdot \\log_{10}(1 + \\frac{f}{700})\n",
     "     $$\n",
-    "    - The frequency spectrum is then divided into a series of overlapping Mel filter banks (triangular filters), each capturing energy in a specific range of frequencies.\n",
+    "    - The frequency spectrum is then divided into multiple overlapping mel filter banks. Each of these captures the energy in a specific range of frequencies.\n",
     "\n",
     "4. **Compute Filter Bank Energies:**\n",
     "    - Multiply the magnitude spectrum by the Mel filter bank weights and sum the results for each filter to get a set of Mel-scaled energies:\n",
@@ -2545,14 +2545,13 @@
     "    - Hm(k): The Mel filter bank response for filter m.\n",
     "\n",
     "5. **Logarithmic Compression:**\n",
-    "    - Apply a logarithm to the Mel-scaled energies to mimic the human ear's logarithmic perception of loudness:\n",
+    "    - Here we apply a logaritm to the mel-scaled energies. This mimics the human ear's perception of loudness: \n",
     "     $$\n",
     "     \\log(E_m)\n",
     "     $$\n",
     "\n",
     "6. **Apply the Discrete Cosine Transform (DCT):**\n",
-    "    - The final step is to apply the*DCT to the log Mel energies. This decorrelates the features and compresses the data, leaving only the most important coefficients:\n",
-    "     $$\n",
+    "    - Lastly the DCT is applied to the mel energies. This decorrelates and compresses the features, while learning only the most important efficiencies: \n",
     "     C_n = \\sum_{m=0}^{M-1} \\log(E_m) \\cdot \\cos\\left(\\frac{\\pi n (2m+1)}{2M}\\right)\n",
     "     $$\n",
     "    - The result is the Mel-Frequency Cepstral Coefficients (MFCCs), with the first few coefficients typically carrying most of the useful information.\n",
