Changed mfcc delta explanation

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2552,6 +2552,8 @@
     "\n",
     "6. **Apply the Discrete Cosine Transform (DCT):**\n",
     "    - Lastly the DCT is applied to the mel energies. This decorrelates and compresses the features, while learning only the most important efficiencies: \n",
+    "\n",
+    "     $$\n",
     "     C_n = \\sum_{m=0}^{M-1} \\log(E_m) \\cdot \\cos\\left(\\frac{\\pi n (2m+1)}{2M}\\right)\n",
     "     $$\n",
     "    - The result is the Mel-Frequency Cepstral Coefficients (MFCCs), with the first few coefficients typically carrying most of the useful information.\n",
@@ -2565,18 +2567,17 @@
     "---\n",
     "\n",
     "#### **Feature Trajectories (MFCC Delta)**\n",
-    "- **TLDR**: MFCC deltas extend the static timbral representation of MFCCs by introducing a temporal component, making them particularly useful for genres characterized by dynamic soundscapes or rhythmic complexity. The mathematical approach is straightforward, involving a sliding window to measure temporal changes while balancing sensitivity and smoothness. Though potentially less impactful for short, static clips, they remain a valuable feature in clustering tasks where temporal variation matters.\n",
+    "- **TLDR**: MFCC deltas add a time-sensitive layer to MFCCs by tracking how timbre changes over time. This helps to identify genres with shifting soundscapes or complex rhythms. The math is a sliding window tracks changes while balancing detail and smoothness. Deltas might be less impactful for short, static clips, but are valuable when temporal variation matters. \n",
+    "\n",
     "\n",
     "**What It Does:**\n",
-    "- MFCC deltas (or first-order derivatives) measure how MFCC values change over time, capturing the temporal dynamics of timbral features.\n",
-    "- While MFCCs summarize the spectral envelope of a sound at a single point in time, MFCC deltas provide insights into the rate and nature of change in the sound's timbral qualities.\n",
+    "- MFCC deltas (first-order derivatives) show how MFCC values shift over time. This shows how a certain character of sound changes over time. \n",
+    "- MFCCs describe the spectral shape at each moment, while deltas show how that shape changes over a period of time. \n",
     "\n",
     "**Why Useful:**\n",
     "- Dynamic changes in timbre can be strong indicators of musical genre:\n",
-    "  - Jazz or classical music might exhibit smooth, continuous variations, reflecting evolving instrumentation and harmonic progressions.\n",
-    "  - pop music, on the other hand, could have more abrupt, repetitive changes due to beat-driven transitions or drops.\n",
-    "- Even within 30-second clips, deltas may reveal rhythmic complexity or transitions in instrumentation.\n",
-    "- However, in cases where the clips are highly static or lack significant variation, MFCC deltas might contribute less to distinguishing genres.\n",
+    "  - Jazz and classical may show smooth shifts from evolving instrumentation and harmonies, while pop music could have more abrupt changes in the transitions or drops. \n",
+    "- Even 30-second samples can reveal rhythmic details or instrumental changes.\n",
     "\n",
     "**How MFCC Deltas Are Constructed:**\n",
     "\n",
@@ -2584,18 +2585,18 @@
     "   - Start with the matrix of MFCCs, where each row represents a specific coefficient, and each column corresponds to a time frame.\n",
     "\n",
     "2. **Compute Temporal Differences:**\n",
-    "   - Deltas are calculated using finite differences over a sliding window of frames:\n",
+    "   - Deltas are calculated with a sliding window. \n",
     "     $$\n",
     "     \\Delta C(t) = \\frac{\\sum_{\\tau=-T}^T \\tau \\cdot C(t+\\tau)}{\\sum_{\\tau=-T}^T \\tau^2}\n",
     "     $$\n",
     "     - C(t): MFCC coefficient at time t.\n",
     "     - T: Size of the time window for delta computation.\n",
-    "   - In essence, this formula computes a weighted average of differences between MFCC values in neighboring frames, emphasizing larger temporal changes while smoothing out noise.\n",
+    "   - This formula averages the differences across neighboring frames, emphasizing changes and reducing noise.\n",
     "\n",
     "3. **Smoothing and Noise Reduction:**\n",
     "   - The size of the sliding window (T) determines the smoothness of the delta values:\n",
-    "     - A small window captures rapid changes but may be noisy.\n",
-    "     - A larger window smooths out noise but might miss finer details in the dynamics.\n",
+    "     - A small Tcaptures rapid changes but could be noisy. \n",
+    "     - Large T smooths noise but may miss subtle changes.\n",
     "\n",
     "DataMListic. (2023, February 1). Spectral features - Deltas and Delta-Deltas explained [Video]. YouTube. https://www.youtube.com/watch?v=zxEnuPolylY\n",
     "\n",
