Changed spectral centroid + added source

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2517,7 +2517,7 @@
     "**How MFCCs Are Constructed:**\n",
     "\n",
     "1. **Frame the Signal:**\n",
-    "    - Sound changes over time, so we split it into small overlapping chunks. \n",
+    "    - Sound changes over time, so we split it into small overlapping frames. \n",
     "    - A smoothing function (Hamming window) is applied to each chunk to avoid sharp edges.\n",
     "     $$\n",
     "     w(n) = 0.54 - 0.46 \\cdot \\cos\\left(\\frac{2\\pi n}{N-1}\\right)\n",
@@ -2559,6 +2559,8 @@
     "    - The result is the Mel-Frequency Cepstral Coefficients (MFCCs), with the first few coefficients typically carrying most of the useful information.\n",
     "\n",
     "Valerio Velardo - The Sound of AI. (2020, October 5). Mel-Frequency cepstral coefficients explained easily [Video]. YouTube. https://www.youtube.com/watch?v=4_SH2nfbQZ8\n",
+    "\n",
+    "GeeksforGeeks. (2024b, juni 26). Melfrequency Cepstral Coefficients (MFCC) for Speech Recognition. GeeksforGeeks. https://www.geeksforgeeks.org/mel-frequency-cepstral-coefficients-mfcc-for-speech-recognition/?ref=gcse_outind\n",
     "\n",
     "Deruty, E. (2022, December 15). Intuitive understanding of MFCCs - Emmanuel Deruty - Medium. Medium. https://medium.com/@derutycsl/intuitive-understanding-of-mfccs-836d36a1f779\n",
     "\n",
@@ -2603,17 +2605,19 @@
     "---\n",
     "\n",
     "#### **Spectral Centroid**\n",
-    "- **TLDR**: Spectral centroids provide a compact representation of the frequency content's distribution, offering valuable insights into timbral brightness and genre-related characteristics. The math is intuitive, relying on a weighted average that highlights the dominant frequency regions in the spectrum. This makes it a powerful feature for clustering and classification tasks in music analysis.\n",
+    "- **TLDR**: Spectral centroids describe the \"center of mass\" of a sound’s frequencies. It gives an insight into the timral brightess and other genre related characteristics. The math relies on a weighted average that highlights the dominant frequency regions in a spectrum.\n",
+    "  \n",
     "\n",
     "**What It Does:**\n",
     "- The spectral centroid measures the \"center of mass\" of a sound’s frequency spectrum.\n",
     "- It provides a numerical value that reflects the brightness of a sound:\n",
-    "  - Higher values correspond to brighter, sharper sounds dominated by higher frequencies (e.g., cymbals, electric guitars).\n",
-    "  - Lower values correspond to darker, mellower sounds dominated by lower frequencies (e.g., bass, cello).\n",
+    "  - A high centroid corresponds to brigher / sharper sounds, dominated by higher frequencies (electric guitars for example).\n",
+    "  - A low centroid corresponds to darker / mellower sounds, dominated by lower frequencies (bass for example). \n",
+    "  \n",
     "\n",
     "**Why Useful:**\n",
-    "- Genre differentiation: Brighter genres like rock tend to have higher spectral centroids, whereas smoother genres like jazz or classical may lean toward lower values.\n",
-    "- Timbre characterization: Brightness is a key aspect of timbre, helping to distinguish instruments and production styles.\n",
+    "- Genre differentiation: it's possible to distinct different genres bases on the centroid. Higher spectral centroids could be rock, while lower counes could be jazz or classical.\n",
+    "- Timbre characterization: helps distinguish different instruments and production styles based on brightness.\n",
     "\n",
     "**How Spectral Centroids Are Constructed:**\n",
     "\n",
@@ -2623,10 +2627,11 @@
     "     S(f)\n",
     "     $$\n",
     "     - S(f): Magnitude of the signal at frequency f.\n",
-    "     - This is obtained by applying the Short-Time Fourier Transform (STFT) to the time-domain signal, which decomposes the signal into its frequency components over time.\n",
+    "     - This is obtained by using the short-time fourier transform to the time domain signal. This decomposes the signal into it's unique frequency components over a period of time. \n",
+    "\n",
     "\n",
     "2. **Compute the Centroid:**\n",
-    "   - The spectral centroid for each frame (time slice) is calculated as a weighted average of the frequencies, using the magnitude of each frequency as the weight:\n",
+    "   - For each small time window, the spectral centroid is the average frequency, weighted by how strong each frequency is (based on the magnitude):\n",
     "     $$\n",
     "     C = \\frac{\\sum_{f} f \\cdot S(f)}{\\sum_{f} S(f)}\n",
     "     $$\n",
@@ -2636,12 +2641,12 @@
     "\n",
     "3. **Interpretation:**\n",
     "   - The result, C, is the frequency (in Hz) that represents the \"center of mass\" of the spectrum.\n",
-    "   - A higher C indicates that the majority of the spectral energy lies in the upper frequencies, while a lower C indicates concentration in the lower frequencies.\n",
+    "   - A higher C indicates that the majority of the spectral energy lies in upper frequencies, meaning it's a brigher sound, while a lower C meas the exact opposite, darker sounds.\n",
     "\n",
     "4. **Temporal Aggregation:**\n",
     "   - To summarize spectral centroids over the entire audio clip:\n",
-    "     - Mean: Represents the overall brightness of the clip.\n",
-    "     - Variance: Indicates the variability in brightness, which may correspond to dynamic changes in instrumentation or mixing.\n",
+    "     - Mean: Represents the overall brightness ofan audio clip. \n",
+    "     - Variance: indicates how much the brightness changes over time, which may correspond to dynamic changes in instrumentation or mixing.\n",
     "\n",
     "**Example:**\n",
     "Imagine a sound with:\n",
@@ -2649,6 +2654,8 @@
     "- A smaller peak at 5000 Hz (high frequency) with magnitude 2.\n",
     "\n",
     "The spectral centroid would be closer to 100 Hz because the lower frequency dominates the spectrum.\n",
+    "\n",
+    "Wikipedia contributors. (2024b, oktober 28). Spectral centroid. Wikipedia. https://en.wikipedia.org/wiki/Spectral_centroid\n",
     "\n",
     "---\n",
     "\n",
