--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2660,18 +2660,17 @@
     "---\n",
     "\n",
     "#### **Spectral Roll-Off**\n",
-    "- **TLDR**: Spectral roll-off captures how spectral energy is distributed across frequencies, making it valuable for understanding the \"cut-off point\" of energy in audio signals. Its mathematical simplicity—relying on cumulative sums and percentages—belies its utility in differentiating between genres, timbres, and instrumentation.\n",
+    "- **TLDR**: Spectral roll-off shows how the energy is spread across frequencies by finding the 'cut-off' frequency in audio signals. Despite it's not too complicated math it's very usefull for distinguishing between genres.\n",
     "\n",
     "**What It Does:**\n",
-    "- The spectral roll-off represents the frequency boundary below which a specified percentage of the total spectral energy resides. \n",
-    "- It is currently calculated at 85%, meaning it identifies the frequency below which 85% of the cumulative energy in the spectrum lies.\n",
-    "- This feature helps distinguish between high-energy sounds, with energy distributed across higher frequencies (e.g., pop), and low-energy sounds, where energy is more concentrated in lower frequencies (e.g., classical).\n",
+    "- It marks the frequency below which a certain percentage of the total spectral energy is located. \n",
+    "- This measure helps to separate sounds with a high frequency energy from those with more energy in lower frequencies. \n",
     "\n",
     "\n",
     "**Why Useful:**\n",
-    "- Genre differentiation: High-energy genres like rock often have higher roll-off values due to significant high-frequency content, while smoother genres like jazz have lower roll-off values.\n",
-    "- Instrumental texture: Instruments like cymbals or electric guitars contribute high-frequency energy, raising the roll-off point. Conversely, instruments like double basses or tubas lower it.\n",
-    "- Timbre analysis: It complements other spectral features (e.g., spectral centroid (see above)) in capturing the distribution of energy across the spectrum.\n",
+    "- Grenre differentiation: Energetic genres like rock have higher roll-off energies duo to the more high frequency content. Smoother genres like jazz tend to have lower values. \n",
+    "- Instrumental texture: Certain instruments like electric guiters with high-frequency energies raise the roll-off point.\n",
+    "- Timbre analysis: This feature works alongside other features (like the spectral centroid feature) to get a better understanding about how energy is distributed across the spectrum. \n",
     "\n",
     "\n",
     "**How Spectral Roll-Off Is Constructed:**\n",
@@ -2681,7 +2680,7 @@
     "     - S(f): Magnitude of the signal at each frequency f.\n",
     "\n",
     "2. **Cumulative Energy Calculation:**\n",
-    "   - Compute the **cumulative sum** of spectral energy up to each frequency f:\n",
+    "   - Calculate the cumulative sum of spectral energy up to each frequency f:\n",
     "     $$\n",
     "     E_{\\text{cumulative}}(f) = \\sum_{i=0}^{f} S(f_i)\n",
     "     $$\n",
@@ -2689,7 +2688,7 @@
     "     - This provides a running total of the energy distribution.\n",
     "\n",
     "3. **Find Roll-Off Frequency:**\n",
-    "   - Identify the frequency frolloff where the cumulative energy reaches a specified percentage p (e.g., 85%) of the total energy:\n",
+    "   - Identify the frequency frolloff where the cumulative energy reaches a specified percentage p  of the total energy:\n",
     "     $$\n",
     "     E_{\\text{cumulative}}(f_{\\text{rolloff}}) = p \\cdot E_{\\text{total}}\n",
     "     $$\n",
@@ -2705,8 +2704,8 @@
     "\n",
     "4. **Temporal Aggregation:**\n",
     "   - To summarize the roll-off over an entire audio clip:\n",
-    "     - Mean: The average roll-off frequency across time frames, indicating the overall spectral boundary.\n",
-    "     - Variance: The variability of roll-off frequencies, reflecting how much the energy distribution changes over time.\n",
+    "     - Mean: The average roll-off frequency over all time frames, showing the overall spectral boundary.\n",
+    "     - Variance: The degree of change in roll-off frequencies, indicating how the energy distribution varies over time.\n",
     "\n",
     "**Example:**\n",
     "Suppose a signal has total spectral energy distributed as follows:\n",
@@ -11060,7 +11059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
